# lakeflow-tapworks

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONNECTOR_DEVELOPMENT_GUIDE.md  CONNECTOR_OVERVIEW.md  GROUP_CONFIGURATION_OPTIONS.md  IMPROVEMENTS.md  NOTICE.md  OOP_ARCHITECTURE.md  README.md  README_TEMP.md  TODO.md  USAGE.md  VALIDATIONS.md  cli.py  databricks.yml  gateway_pipeline_dab_generator.ipynb  generate_dab_yaml.py  notebook_runner.py  pyproject.toml  requirements.txt  test_pause_status.py  test_unified_naming.py
_legacy/: README-ga4.md  README-root.md  README-sfdc.md  README.md  ga4_deprecated_pipeline_modes.py  main_SFDC_old.ipynb  sfdc-deployment-auto_balance.py
core/: __init__.py  connectors.py  exceptions.py  registry.py  runner.py
docs/: ARCHITECTURE.md  DABS_CONNECTIONS_INVESTIGATION.md  GA4_FINDINGS.md  README_GENERATOR.md  README_TESTS.md  README_WORKFLOW.md  SETUP_GUIDE.md  USAGE.md  VALIDATION.md  VALIDATIONS.md  pause_status_feature.md  test_postgres_connection_sdk.py
examples/: example_pipeline_file.yml  oop_usage_example.py
ga4/: create_ga4_connection.py  pipeline_generator.py  requirements.txt  run_pipeline_generation.ipynb  run_pipeline_generation.py  setup_ga4_service_account.sh
google_analytics/: README.md  connector.py  example.ipynb  example_notebook.ipynb  pipeline_generator.py  pipeline_generator_oop.py  pipeline_setup.ipynb
helpers/: create_ga4_catalog.py  create_postgres_connection.py
postgres/: README.md  connector.py  create_postgres_connection.py  example.ipynb  pipeline_generator.py  preflight_check.py
sfdc/: pre_work.py  (+5 more)
(+259 files in other folders)
